--- a/client/package.json
+++ b/client/package.json
@@ -25,6 +25,7 @@
     "font-awesome": "^4.7.0",
     "keycloak-angular": "^13.0.0",
     "keycloak-js": "^20.0.2",
+    "lodash": "^4.17.21",
     "ngx-file-drop": "^14.0.2",
     "ngx-toastr": "^16.0.1",
     "rxjs": "~7.5.0",
