--- a/configserver/src/main/resources/config/gateway-server.properties
+++ b/configserver/src/main/resources/config/gateway-server.properties
@@ -11,6 +11,9 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id= true
 
 spring.cloud.gateway.default-filters= TokenRelay, RemoveRequestHeader=Cookie
 
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8069/realms/takecare
+
+
 
 
 
