--- a/configserver/src/main/resources/config/notification-service.properties
+++ b/configserver/src/main/resources/config/notification-service.properties
@@ -1,8 +1,14 @@
 eureka.client.serviceUrl.defaultZone: ${EUREKA_URI:http://localhost:8070/eureka}
 server.port=8091
 spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8069/realms/takecare
-#spring.flyway.clean-on-validation-error=true
-#spring.flyway.cleanDisabled = false
+
 management.endpoints.web.exposure.include=httptrace
 
 logging.level.root=DEBUG
+
+spring.data.mongodb.authentication-database=admin
+spring.data.mongodb.database=NotificationDatabase
+spring.data.mongodb.port=27017
+spring.data.mongodb.host=localhost
+spring.data.mongodb.username=admin
+spring.data.mongodb.password=admin
