--- a/notificationservice/pom.xml
+++ b/notificationservice/pom.xml
@@ -9,7 +9,7 @@
         <relativePath/> <!-- lookup parent from repository -->
     </parent>
     <groupId>com.takecare</groupId>
-    <artifactId>userservice</artifactId>
+    <artifactId>notificationservice</artifactId>
     <version>0.0.1-SNAPSHOT</version>
     <name>notificationservice</name>
     <description>notificationservice</description>
@@ -95,6 +95,13 @@
 
     <build>
         <plugins>
+            <plugin>
+                <artifactId>maven-surefire-plugin</artifactId>
+                <version>2.10</version>
+                <configuration>
+                    <useFile>false</useFile>
+                </configuration>
+            </plugin>
             <plugin>
                 <groupId>org.springframework.boot</groupId>
                 <artifactId>spring-boot-maven-plugin</artifactId>
