Try to add full Azure Application Engine Support - attempt failed

--- a/client/angular.json
+++ b/client/angular.json
@@ -68,6 +68,7 @@
           },
           "configurations": {
             "production": {
+              "proxyConfig": "src/proxy.conf.json",
               "browserTarget": "client:build:production"
             },
             "development": {
@@ -107,6 +108,9 @@
         }
         }
       }
+    },
+    "cli": {
+      "analytics": false
     }
   }
-}
+
