--- a/configserver/src/main/resources/config/eureka-server.properties
+++ b/configserver/src/main/resources/config/eureka-server.properties
@@ -4,4 +4,4 @@ eureka.client.registerWithEureka=false
 eureka.client.fetchRegistry= false
 
 eureka.instance.preferIpAddress = true
-eureka.client.serviceUrl.defaultZone = http://localhost:8070/eureka
+eureka.client.serviceUrl.defaultZone = ${EUREKA_URI:http://eureka-server:8070/eureka}
