--- a/configserver/src/main/resources/config/gateway-server.properties
+++ b/configserver/src/main/resources/config/gateway-server.properties
@@ -2,7 +2,7 @@ server.port=8092
 eureka.instance.preferIpAddress= true
 eureka.client.registerWithEureka= true
 eureka.client.fetchRegistry = true
-eureka.client.serviceUrl.defaultZone= ${EUREKA_URI:http://localhost:8070/eureka}
+eureka.client.serviceUrl.defaultZone= ${EUREKA_URI:http://eureka-server:8070/eureka}
 spring.cloud.discovery.enabled=true
 management.endpoint.gateway.enabled=true
 
@@ -11,7 +11,7 @@ spring.cloud.gateway.discovery.locator.lower-case-service-id= true
 
 spring.cloud.gateway.default-filters= TokenRelay, RemoveRequestHeader=Cookie
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8069/realms/takecare
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/takecare
 
 
 
