--- a/configserver/src/main/resources/config/post-service.properties
+++ b/configserver/src/main/resources/config/post-service.properties
@@ -1,14 +1,14 @@
 spring.jpa.hibernate.ddl-auto=validate
-spring.datasource.url=jdbc:mysql://localhost:3306/postDB
+spring.datasource.url=jdbc:mysql://mysqldb:3306/postDB
 spring.datasource.username=user
 spring.datasource.password=password
 spring.datasource.driver-class-name=com.mysql.cj.jdbc.Driver
 spring.jpa.show-sql: true
 
 server.port=8090
-eureka.client.serviceUrl.defaultZone: ${EUREKA_URI:http://localhost:8070/eureka}
+eureka.client.serviceUrl.defaultZone: ${EUREKA_URI:http://eureka-server:8070/eureka}
 
-spring.security.oauth2.resourceserver.jwt.issuer-uri=http://localhost:8069/realms/takecare
+spring.security.oauth2.resourceserver.jwt.issuer-uri=http://keycloak:8080/realms/takecare
 
 
 
