--- a/gatewayserver/src/main/resources/application.properties
+++ b/gatewayserver/src/main/resources/application.properties
@@ -1,6 +1,6 @@
 spring.application.name=gateway-server
 spring.profiles.active=dev
 
-spring.config.import=optional:configserver:http://localhost:8071
+spring.config.import=optional:configserver:http://config-server:8071
 management.endpoints.web.exposure.include=*
 
