--- a/postservice/src/main/resources/application.properties
+++ b/postservice/src/main/resources/application.properties
@@ -1,7 +1,7 @@
 spring.application.name=post-service
 spring.profiles.active=dev
 
-spring.config.import=optional:configserver:http://localhost:8071
+spring.config.import=optional:configserver:http://config-server:8071
 management.endpoints.web.exposure.include=*
 
 
